--- a/recipes/style.css
+++ b/recipes/style.css
@@ -37,7 +37,38 @@ img {
     padding: 0px;
 }
 
-h1 {
+h1,
+h2 {
     margin-top: 0.75em;
     margin-bottom: 0.5em;
+    width: 500px;
+}
+
+ul {
+    width: 500px;
+    border: 1px solid #213970;
+    border-radius: 15px;
+    background-color: white ;
+    color: #213970;
+    margin-bottom: 3em;
+    margin-top: 1.5em;
+}
+
+li {
+    width: 300px;
+}
+
+dl { 
+    width: 500px;
+    border: 1px solid #213970;
+    border-radius: 15px;
+    background-color: white ;
+    color: #213970;
+    margin-bottom: 3em;
+    margin-top: 1.5em;
+}
+
+.other-recipes {
+    margin-top: 1em;
+    list-style-type: none;
 }
